# iota-cli

./: .gitignore  CMakeLists.txt  README.md  checkout.c  checkout.h  compile_commands.json  dbus_interfaces.c  dbus_interfaces.h  exec.c  exec.h  main.c  main.h  notify.c  notify.h  update.c  update.h  upgrade.c  upgrade.h  version.c  version.h  version.h.in
assets/: .gitignore  test_firmware.iota  test_private.pem  test_public.pem
utils/: os_file.c  os_mailbox.c  os_mailbox.h  os_mutex.c  os_thread.c  os_time.h  stb_sprintf.h  xdef.c  xflag.h  xhash.h  xjson.c  xlist.h  xlog.c  xlog.h  xoption.c  xoption.h  xstring.c  xstring.h
xbox/: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  Doxyfile  MAINTAIN.md  README.md  valgrind_check.sh
xbox/cmake/: .gitignore  xbox-version.cmake
xbox/src/dependencies/: CMakeLists.txt  cJSON.c  dependencies.toml
xbox/src/xfx/: CMakeLists.txt  broker.c  broker.h  log.c  log.h  parser.c  parser.h  thread_pool.c  thread_pool.h
xbox/src/xfx/broker/: broker_mqtt.c  broker_mqtt.h  broker_nats.c  broker_nats.h
xbox/src/xfx/mbus/: mbus.c  mbus.h  mbus_message.c  mbus_message.h
xbox/src/xfx/sinks/: basic_file_sink.c  basic_file_sink.h  broker_sink.c  broker_sink.h  console_sink.c  console_sink.h  daily_file_sink.c  daily_file_sink.h  esp_log_sink.c  esp_log_sink.h  ostream_sink.hpp  rotating_file_sink.c  rotating_file_sink.h  rtthread_ulog_sink.c  rtthread_ulog_sink.h  syslog_sink.c  syslog_sink.h  systemd_sink.c  systemd_sink.h
xbox/src/xlt/: CMakeLists.txt  list.h  xbitmap.c  xbitmap.h  xbox_version.h  xdef.c  xdef.h  xflag.c  xhash.c  xhashmap.c  xhashmap.h  xjson.h  xlist.c  xlog.c  xoptions.c  xoptions.h  xset.c  xset.h  xstring.c
xbox/src/xos/: CMakeLists.txt
xbox/src/xos/freertos/: os_file.c  os_file.h  os_mailbox.c  os_mailbox.h  os_mutex.c  os_mutex.h  os_thread.c  os_thread.h  os_time.c  os_time.h
xbox/src/xos/rt-thread/: .gitignore  SConscript  os_file.c  os_file.h  os_mailbox.c  os_mailbox.h  os_mutex.c  os_mutex.h  os_thread.c  os_thread.h  os_time.c  os_time.h
xbox/src/xos/unix/: os_file.h  os_mutex.h  os_thread.h  os_time.c
